rm parag on association networks in intro

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -88,13 +88,13 @@
 
     \paragraph{}
     %Need a section here describing horizontal / single-trophic systems and what some of the difficulties are for these. 
-    Network theory has been widely applied to investigate the structure of biological systems such as food webs and other types of multi-level ecological interaction networks. There is now a rich body of work describing the characteristics of food webs, plant-pollinator networks, and host-parasite interactions (e.g. \cite{Lafferty2008, Thompson2012, Dunne2013, Stouffer2014, Cirtwill2015a}). Horizontal networks however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) have been largely neglected \parencite{Ellison2019}. These elements and their interactions have been found to alter the structure, stability and diversity-functioning relationships of the whole multi-level system \parencite{Hammill2015, Giling2019, Zhao2019, Miele2019}, which makes integrating horizontal and vertical networks a key challenge in improving our understanding of system dynamics and persistence \parencite{Godoy2018c}.
+    Network theory has been widely applied to investigate the structure of biological systems such as food webs and other types of multi-level ecological interaction networks. There is now a rich body of work describing the structural properties of food webs, plant-pollinator networks, and host-parasite interactions (e.g. \cite{Lafferty2008, Thompson2012, Dunne2013, Stouffer2014, Cirtwill2015a}). Horizontal networks however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) have been largely neglected \parencite{Ellison2019}. These elements and their interactions have been found to alter the structure, stability and diversity-functioning relationships of the whole multi-level system \parencite{Hammill2015, Giling2019, Zhao2019, Miele2019}, which makes integrating horizontal and vertical networks a key challenge in improving our understanding of system dynamics and persistence \parencite{Godoy2018c}.
+
+    %\paragraph{} % I reckon this paragraph can be cut?? It doesn't bring that much to the intro... 
+    %In many horizontal systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. One strategy is to look at associations between the nodes: nodes which are often found together are assumed to interact more strongly than nodes which rarely co-occur (e.g. \cite{Araujo2011}). This approach benefits from a wide range of packages available in R, requires fairly simple data (presence/absence of the nodes) and can be used to deduce associations between large numbers of nodes. An important drawback remains: association networks cannot always distinguish between the multiple confounding factors which lead to co-occurrence, and in ecological communities little evidence supports their use as a proxy for interactions \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
 
     \paragraph{} 
-    In many horizontal systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. One strategy is to look at associations between the nodes: nodes which are often found together are assumed to interact more strongly than nodes which rarely co-occur (e.g. \cite{Araujo2011}). This approach benefits from a wide range of packages available in R, requires fairly simple data (presence/absence of the nodes) and can be used to deduce associations between large numbers of nodes. An important drawback remains: association networks cannot always distinguish between the multiple confounding factors which lead to co-occurrence, and in ecological communities little evidence supports their use as a proxy for interactions \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
-
-    \paragraph{}
-    An alternative approach is to directly quantify the effects of interacting nodes on the node of interest by evaluating its performance in the absence and presence of potential interaction partners. Performance can be any variable of interest which affects the dynamics of the system, for example population growth. The resulting interactions are phenomenological and thus not dependant on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system \parencite{Novak2010}. Such methods can quickly become data intensive and computationally complex, however, as the number of nodes $S$ increases and the number of potential direct interactions subsequently increases by $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different elements is typically skewed, with a few nodes making up the majority of abundances and a large number of nodes remaining rare \parencite{Fisher1943}. Given that data collection is limited in time and scope, interactions with rarer nodes especially may not be realised simply by chance, excluding them from analysis regardless of the role they might play. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method which is flexible to both a high number of nodes, and potential gaps in our records of interactions. 
+    In many horizontal systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. A common approach is to directly quantify the effects of interacting nodes on the node of interest by evaluating its performance in the absence and presence of potential interaction partners. Performance can be any variable of interest which affects the dynamics of the system, for example population growth. The resulting interactions are phenomenological and thus not dependant on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system \parencite{Novak2010}. Such methods can quickly become data intensive and computationally complex, however, as the number of nodes $S$ increases and the number of potential direct interactions subsequently increases by $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different elements is typically skewed, with a few nodes making up the majority of abundances and a large number of nodes remaining rare \parencite{Fisher1943}. Given that data collection is limited in time and scope, interactions with rarer nodes especially may not be realised simply by chance, excluding them from analysis regardless of the role they might play. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method which is flexible to both a high number of nodes, and potential gaps in our records of interactions. 
 
 
     \paragraph{} % I'm not sur this paragraph will be necessary ... but it will need a little bit more work if I include it.
