--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -84,21 +84,21 @@
 % Current = 580 words
     
     \paragraph{}
-    In many biological systems, interactions between various elements affect each other's performance and together determine the dynamics of the whole system. In order to understand how system dynamics behave when many elements are involved, such complex systems can be represented as networks where the elements are nodes and linked by interactions. These nodes can take on a wide array of identities, including cells, individuals, populations or species. Likewise, interactions or links can operate via many different mechanisms and have a wide range of effects on the nodes. Fundamentally, biological networks have been observed to typically differ from randomly-assembled networks in important and varied ways, thus informing us on the biological processes structuring these systems \parencite{Dunne2002}.
+    In many biological systems, interactions between various elements affect each other's performance and together determine the dynamics of the whole system. In order to understand how system dynamics behave when many elements are involved, such complex systems can be represented as networks where the elements are nodes and linked by interactions \parencite{Pimm1978}. These nodes can take on a wide array of identities, including cells, individuals, populations or species. Likewise, interactions or links can operate via many different mechanisms and have a wide range of effects on the nodes. Fundamentally, biological networks have been observed to typically differ from randomly-assembled networks in important and varied ways, thus informing us on the biological processes structuring these systems \parencite{Dunne2002}.
 
     \paragraph{}
     %Need a section here describing horizontal / single-trophic systems and what some of the difficulties are for these. 
-    Network theory has been widely applied to investigate the structure of biological systems such as food webs and other types of multi-level ecological interaction networks. There is now a rich body of work describing the structural properties of food webs, plant-pollinator networks, and host-parasite interactions (e.g. \cite{Lafferty2008, Thompson2012, Dunne2013, Stouffer2014, Cirtwill2015a}). Horizontal networks however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) have been largely neglected \parencite{Ellison2019}. These elements and their interactions have been found to alter the structure, stability and diversity-functioning relationships of the whole multi-level system \parencite{Hammill2015, Giling2019, Zhao2019, Miele2019}, which makes integrating horizontal and vertical networks a key challenge in improving our understanding of system dynamics and persistence \parencite{Godoy2018c}.
+    Network theory has been widely applied to investigate the structure of biological systems such as food webs and other types of multi-level ecological interaction networks. There is now a rich body of work describing the structural properties of food webs, plant-pollinator networks, and host-parasite interactions (e.g. \cite{Lafferty2008, Thompson2012, Dunne2013, Stouffer2014, Cirtwill2015a}). Horizontal networks however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) have been largely neglected in ecological studies \parencite{Ellison2019}. These elements and their interactions have been found to alter the structure, stability and diversity-functioning relationships of the whole multi-level system \parencite{Hammill2015, Giling2019, Zhao2019, Miele2019}, which makes integrating horizontal and vertical networks a key challenge in improving our understanding of system dynamics and persistence \parencite{Godoy2018c}.
 
-    %\paragraph{} % I reckon this paragraph can be cut?? It doesn't bring that much to the intro... 
+    %\paragraph{} % I reckon this paragraph can be cut?? It doesn't bring that much to the intro... Can be kept for MEE
     %In many horizontal systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. One strategy is to look at associations between the nodes: nodes which are often found together are assumed to interact more strongly than nodes which rarely co-occur (e.g. \cite{Araujo2011}). This approach benefits from a wide range of packages available in R, requires fairly simple data (presence/absence of the nodes) and can be used to deduce associations between large numbers of nodes. An important drawback remains: association networks cannot always distinguish between the multiple confounding factors which lead to co-occurrence, and in ecological communities little evidence supports their use as a proxy for interactions \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
 
     \paragraph{} 
-    In many horizontal systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. A common approach is to directly quantify the effects of interacting nodes on the node of interest by evaluating its performance in the absence and presence of potential interaction partners. Performance can be any variable of interest which affects the dynamics of the system, for example population growth. The resulting interactions are phenomenological and thus not dependant on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system \parencite{Novak2010}. Such methods can quickly become data intensive and computationally complex, however, as the number of nodes $S$ increases and the number of potential direct interactions subsequently increases by $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different elements is typically skewed, with a few nodes making up the majority of abundances and a large number of nodes remaining rare \parencite{Fisher1943}. Given that data collection is limited in time and scope, interactions with rarer nodes especially may not be realised simply by chance, excluding them from analysis regardless of the role they might play. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method which is flexible to both a high number of nodes, and potential gaps in our records of interactions. 
+    In many horizontal systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. A common approach in ecology is to directly quantify the effects of interacting nodes on the node of interest by evaluating its performance in the absence and presence of potential interaction partners \parencite{Connell1961, Grace1990}. Performance can be any variable of interest which affects the dynamics of the system, for example population growth. The resulting interactions are phenomenological and thus not dependant on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system \parencite{Novak2010}. Such methods can quickly become data intensive and computationally complex, however, as the number of nodes $S$ increases and the number of potential direct interactions subsequently increases by $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different elements is typically skewed, with a few nodes making up the majority of abundances and a large number of nodes remaining rare \parencite{Fisher1943}. Given that data collection is limited in time and scope, interactions with rarer nodes especially may not be realised simply by chance, excluding them from analysis regardless of the role they might play \parencite{Olesen2011}. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method which is flexible to both a high number of nodes, and potential gaps in our records of interactions. 
 
 
-    \paragraph{} % I'm not sur this paragraph will be necessary ... but it will need a little bit more work if I include it.
-    We present a general framework to estimate interactions in highly diverse systems using Bayesian parameter estimation methods which are flexible to greater model complexity. We specify a multi-tiered model which allows us to estimate both realised and unrealised interactions, the latter being conditioned on the former. Using annual wildflower community data in Western Australia consisting of 22 focal species and up to 52 neighbouring species, we illustrate how this novel framework can be applied by couching the resulting interactions into established models of population dynamics. This allows us to account for other demographic processes affecting species performance, as well as translate interaction effects on the measured variable into effects on another variable of interest. We show how the resulting interaction matrices differ from an association network on the same data, and suggest potential applications in species management and conservation that make use of the rich information provided by species interaction networks.
+    \paragraph{} 
+    We present a general framework to estimate interactions in highly diverse systems using Bayesian parameter estimation methods which are flexible to greater model complexity. We specify a multi-tiered model which allows us to estimate both realised and unrealised interactions, the latter being conditioned on the former. Using annual wildflower community data in Western Australia consisting of 22 focal species and up to 52 neighbouring species, we illustrate how this novel framework can be applied by couching the resulting interactions into established models of population dynamics. This allows us to account for other demographic processes affecting species performance, as well as translate interaction effects on the measured variable into effects on another variable of interest. We show how the resulting interaction matrices differ from a spatial-abundance association network on the same data, and suggest potential applications in species management and conservation that make use of the rich information provided by species interaction networks.
 
     %Interactions between species can affect growth rates and population abundances, for example as a predator eats a prey or two plants compete for resources. Together, interactions between many species influence the dynamics of the whole community in ways which can determine patterns of species richness and abundance. In order to understand how community dynamics behave when many species are involved, ecologists can represent communities as networks \parencite{Pimm1978} where species are nodes and linked by interactions. This approach provides a broad view of how multiple species relate to one another within a community \parencite{Kefi2015}. As a result, ecological networks have been observed to typically differ from randomly-assembled networks in important and varied ways, thus informing us on the biological processes structuring these communities \parencite{Dunne2002}. 
 
@@ -163,46 +163,6 @@
     \paragraph{}
     In order to understand how the returned interaction matrix may affect system-wide behaviour, it is useful to also integrate interaction estimates into an overarching model describing the dynamics of the elements in the community. In the wildflower case study illustrated here, models of plant population dynamics are necessary to link interaction effects on performance to patterns of abundance and diversity. In our example, seed survival and germination rates were used to rescale interaction effects on seed production (our measure of performance) into \textit{per-capita} interaction effects on species growth rates. In other cases where different measures of performance are used (e.g. biomass or height), the species-specific demographic rates to be included and the rescaling formula must be derived from a system-appropriate population dynamic model, as illustrated in the Methods. The resulting per-capita interaction strengths allow us to draw inferrences about how elements may affect each other's growth and future abundances, which is particularly useful for a range of ecological applications as we further illustrate below. \\
 
-    \subsection{Case study results}
-
-    \paragraph{}
-     For our case study, the resulting interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values (Figure \ref{fig:netwks}. A \& B). Though competition was the dominant interaction type,  35\% of all focal x neighbour rescaled interactions were facilitative, as were 26 \% of all focal x focal interactions (averages across all network samples). As a result, 40\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. 
-     Furthermore, the elements of the diagonal (the effect of an element on itself) were able to be estimated, which can allow us to quantify how much a species regulates it's own performance. For 12 of our 22 focal species, the scaled distributions of these intraspecific effects did not overlap with 0, which suggests individuals of those species have a non-trivial effect on other individuals of the same species. Together, these features make the resulting interaction matrix qualitatively different to association networks, which are a common alternative to inferring interactions in diverse systems (Figure \ref{fig:netwks}. C). 
-
-    % \paragraph{}
-    % [FLOATING PARAGRAPH, EDIT/DELETE/MOVE] On average, an individual of a different species decreased a focal individual's growth rate by X\% (+- give min and max), wheras an individual of the same species decreased a focal individual's growth rate by X\% (+- give min and max). Overall, 85\% of all wildlfower species across all network samples were found to compete with themselves and therefore regulate their own population abundance [REPHRASE - self-facilitation may also regulate pop abundance!], though the strength of per-capita intraspecific interactions was not correlated to abundance (Figure \ref{fig:aii_abund}. Figure further \ref{fig:species} illustrates how the use of per-capita interaction strengths can allow us to draw conclusions about how different species integrate into and affect other elements of the system. 
-
-    \paragraph{}
-    We now illustrate potential uses of this framework by examining ecological questions important to species management and how the interaction matrix derived from our case study data may help us better understand the system in question. 
-    We use three ecological questions to illustrate some of the ways in which our results may be useful to empirical and applied ecologists.
- 
-    \subsubsection*{Do abundant natives under-regulate their population density compared to rarer natives?}
-    One hypothesis as to why certain plant species are more abundant than others is that they tend to compete with themselves less strongly. Hypothetically, this relieving of intraspecific competition pressure allows them to reach much higher abundances than species which strongly compete with themselves. In Figure \ref{fig:species} A., we plot the strength of per-capita intraspecific interactions against the log abundance of a species in the field. Intraspecific interactions are at their weakest when close to $0$, values above indicate competition and values below indicate self-facilitation. The two most abundant native species \textit{Velleia rosea} (VERO) and \textit{Podolepsis canescens} (POCA) highlighted in purple fall very close to the median intraspecific interaction strength (vertical dashed line). This suggests that \textit{V. rosea} and \textit{P. canescens} do not reach high abundances through an under-regulation of their population density but by through other means (e.g. access to a larger environmental niche space). 
-
-
-    \subsubsection*{Which species may be taking on keystone roles in the system?}
-    Keystone species are often not particularly abundant but have strong effects on the dynamics of the whole ecosystem, for example top predators in food chains. The removal or extinction of a keystone species can thus strongly alter the abundances and distributions of other species in the community. The keystone species concept is useful in helping determine species of particular importance for the safeguarding of a whole system. Though determining which species truly serve keystone roles is a lengthy and involved process, we can identify potential candidates by plotting a species' out strength against it's log abundance. Out-strength refers to the net sum of per-capita interaction strenths on other species. A high positive out-strength indicates that this species has overall strong competitive effects on the population dynamics of other species in the system, whereas a negative out-strength indicates it's overall effect is facilitative. Species with an out-strength close to 0 either have very weak interaction effects on other species in the systems, or have evenly matched competitive and facilitative effects which cancel each other out (though the latter was not found in our system). Figure \ref{fig:species} B. highlights three native species in green which may be potential keystone species due to having strongly competitive or facilitative effects on the rest of the community overall, despite rather low abundances: \textit{Trachymene ornata} (TROR), \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). 
-
-
-    \subsubsection*{Though exotic species are typically thought to compete with natives, there are also reports of facilitative exotics. Is this the case in our system?}
-    Exotic species may have a wide range of effects on native species, both competitive and facilitative. By defining per-capita interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to natives. Figure \ref{fig:species} C. plots the sum of a species competitive effects on neighbours against the sum of it's facilitative effects on neighbours. Exotic species are identified in red. \textit{Hypochaeris glabra} (HYPO) and \textit{Arctotheca calendula} (ARCA) both have a lower-than-median facilitative effect on neighbours but a higher-than-median competitive effect, these two species fit the narrative of potentially harmful exotic species which compete with natives. \textit{Pentameris aroides} (PEAI) on the other hand has a slightly lower-than-median competitive effect and higher-than-median facilitative effect: it competes more weakly and facilitates more strongly than the median species in the system. In this instance, \textit{P. aroides} is an exotic species which nevertheless facilitates some native species.
-
-
-    % \paragraph{}
-    % Got into ecological questions here (and EDIT/REMOVE previous paragraph)
-    %     \begin{itemize}
-    %         \item Do abundant natives under-regulate their population density compared to rarer natives? \\
-    %         Answer: No, POCA and VERO are very close to the median value for self-regulation
-    %         \item Which species take on keystone roles aka low abundance but high impact on others? \\
-    %         Answer: TROR (facilitative), HAOD, GITE (extreme competitor)
-    %         \item Though exotic species are typically thought to compete with natives, there are also reports of facilitative exotics. Is this the case in our system? \\
-    %         Answer: PEIA facilitates more and competes less than the median species 
-    %     \end{itemize}
-
-
-    % \paragraph{}
-    % Potentially a short paragraph on 'network' results (weighted connectance, transitivity) so that I can later discuss how the scaling + network theory can allow us to link network patterns to diversity / stability etc. Basically scaling into per-capita is necessary if we want to make inferrences about diversity maintenance or stability. \\
-    % We calculated .... 
 
 
     \begin{figure}[H]
@@ -213,6 +173,39 @@
         \label{fig:netwks}
        \end{centering}
     \end{figure}    
+
+
+    \subsection{Case study results}
+
+    \paragraph{}
+     For our case study, the resulting interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values (Figure \ref{fig:netwks}. A \& B). Though competition was the dominant interaction type,  35\% of all focal x neighbour rescaled interactions were facilitative, as were 26 \% of all focal x focal interactions (averages across all network samples). As a result, 40\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. 
+     Furthermore, the elements of the diagonal (the effect of an element on itself) were able to be estimated, which can allow us to quantify how much a species regulates it's own performance. For 12 of our 22 focal species, the scaled distributions of these intraspecific effects did not overlap with 0, which suggests individuals of those species have a non-trivial effect on other individuals of the same species. Together, these features make the resulting interaction matrix qualitatively different to association networks, which are a common alternative to inferring interactions in diverse systems (Figure \ref{fig:netwks}. C). 
+
+
+    \paragraph{}
+    We now illustrate potential uses of this framework by examining ecological questions important to species management and how the interaction matrix derived from our case study data may help us better understand the system in question. 
+    We use three ecological questions to illustrate some of the ways in which our results may be useful to empirical and applied ecologists.
+ 
+    \subsubsection*{Do abundant natives under-regulate their population density compared to rarer natives?}
+    One hypothesis as to why certain plant species are more abundant than others is that they tend to compete with themselves less strongly than rare species \parencite{Yenni2012, Yenni2017}. Hypothetically, this release of intraspecific competition pressure allows them to reach much higher abundances than species which strongly compete with themselves. In Figure \ref{fig:species} A., we plot the strength of per-capita intraspecific interactions against the log abundance of a species in the field. Intraspecific interactions are at their weakest when close to $0$. The two most abundant native species \textit{Velleia rosea} (VERO) and \textit{Podolepsis canescens} (POCA) highlighted in purple fall very close to the median intraspecific interaction strength. This suggests that \textit{V. rosea} and \textit{P. canescens} do not reach high abundances through an under-regulation of their population density but by through other means (e.g. access to a larger environmental niche space). 
+
+
+    \subsubsection*{Which species may be taking on keystone roles in the system?}
+    Keystone species are often not particularly abundant but have strong effects on the dynamics of the whole ecosystem, for example top predators in food chains \parencite{Paine1969}. The removal or extinction of a keystone species can thus strongly alter the abundances and distributions of other species in the community. The keystone species concept is useful in helping determine species of particular importance for the safeguarding of a whole system. Though determining which species truly serve keystone roles is a lengthy and involved process, we can identify potential candidates by plotting a species' out strength against it's log abundance. 
+    % Add references and better describe keystone sp. Mills1993 Gorman2016a Berlow2004 Power1996
+    Out-strength refers to the net sum of per-capita interaction strenths on other species. A high positive out-strength indicates that this species has overall strong competitive effects on the population dynamics of other species in the system, whereas a negative out-strength indicates it's overall effect is facilitative. Species with an out-strength close to 0 either have very weak interaction effects on other species in the systems, or have evenly matched competitive and facilitative effects which cancel each other out (though the latter was not found in our system). Figure \ref{fig:species} B. highlights three native species in green which may be potential keystone species due to having strongly competitive or facilitative effects on the rest of the community overall, despite rather low abundances: \textit{Trachymene ornata} (TROR), \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). 
+
+
+    \subsubsection*{Though exotic species are typically thought to compete with natives, there are also reports of facilitative exotics. Is this the case in our system?}
+    Exotic species may have a wide range of effects on native species, both competitive and facilitative. % Add some references here 
+    By defining per-capita interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to natives. Figure \ref{fig:species} C. plots the sum of a species competitive effects on neighbours against the sum of it's facilitative effects on neighbours. Exotic species are identified in red. \textit{Hypochaeris glabra} (HYPO) and \textit{Arctotheca calendula} (ARCA) both have a lower-than-median facilitative effect on neighbours but a higher-than-median competitive effect, these two species fit the narrative of potentially harmful exotic species which compete with natives. \textit{Pentameris aroides} (PEAI) on the other hand has a slightly lower-than-median competitive effect and higher-than-median facilitative effect: it competes more weakly and facilitates more strongly than the median species in the system. In this instance, \textit{P. aroides} is an exotic species which nevertheless facilitates some native species.
+
+
+
+    % \paragraph{}
+    % Potentially a short paragraph on 'network' results (weighted connectance, transitivity) so that I can later discuss how the scaling + network theory can allow us to link network patterns to diversity / stability etc. Basically scaling into per-capita is necessary if we want to make inferrences about diversity maintenance or stability. \\
+    % We calculated .... 
+
 
 
     % \begin{figure}[H]
@@ -251,6 +244,8 @@
 \section{Discussion}
     
 % word count aim: 500-1000
+
+% Cut three paragraphs and tighten
 
 
     \paragraph{} 
