adding refs to results

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -161,7 +161,7 @@
 
 
     \paragraph{}
-    In order to understand how the returned interaction matrix may affect system-wide behaviour, it is useful to also integrate interaction estimates into an overarching model describing the dynamics of the elements in the community. In the wildflower case study illustrated here, models of plant population dynamics are necessary to link interaction effects on performance to patterns of abundance and diversity. In our example, seed survival and germination rates were used to rescale interaction effects on seed production (our measure of performance) into \textit{per-capita} interaction effects on species growth rates. In other cases where different measures of performance are used (e.g. biomass or height), the species-specific demographic rates to be included and the rescaling formula must be derived from a system-appropriate population dynamic model, as illustrated in the Methods. The resulting per-capita interaction strengths allow us to draw inferrences about how elements may affect each other's growth and future abundances, which is particularly useful for a range of ecological applications as we further illustrate below. \\
+    To understand how the returned interaction matrix may affect system-wide behaviour, it is useful to also integrate interaction estimates into an overarching model describing the dynamics of the elements in the community. In the wildflower case study illustrated here, models of plant population dynamics are necessary to link interaction effects on performance to patterns of abundance and diversity. In our example, seed survival and germination rates were used to rescale interaction effects on seed production (our measure of performance) into \textit{per-capita} interaction effects on species growth rates. In other cases where different measures of performance are used (e.g. biomass or height), the species-specific demographic rates to be included and the rescaling formula must be derived from a system-appropriate population dynamic model, as illustrated in the Methods. The resulting per-capita interaction strengths allow us to draw inferrences about how elements may affect each other's growth and future abundances, which is particularly useful for a range of ecological applications as we further illustrate below. \\
 
 
 
@@ -191,14 +191,11 @@
 
 
     \subsubsection*{Which species may be taking on keystone roles in the system?}
-    Keystone species are often not particularly abundant but have strong effects on the dynamics of the whole ecosystem, for example top predators in food chains \parencite{Paine1969}. The removal or extinction of a keystone species can thus strongly alter the abundances and distributions of other species in the community. The keystone species concept is useful in helping determine species of particular importance for the safeguarding of a whole system. Though determining which species truly serve keystone roles is a lengthy and involved process, we can identify potential candidates by plotting a species' out strength against it's log abundance. 
-    % Add references and better describe keystone sp. Mills1993 Gorman2016a Berlow2004 Power1996
-    Out-strength refers to the net sum of per-capita interaction strenths on other species. A high positive out-strength indicates that this species has overall strong competitive effects on the population dynamics of other species in the system, whereas a negative out-strength indicates it's overall effect is facilitative. Species with an out-strength close to 0 either have very weak interaction effects on other species in the systems, or have evenly matched competitive and facilitative effects which cancel each other out (though the latter was not found in our system). Figure \ref{fig:species} B. highlights three native species in green which may be potential keystone species due to having strongly competitive or facilitative effects on the rest of the community overall, despite rather low abundances: \textit{Trachymene ornata} (TROR), \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). 
+    Keystone species have strong effects on the dynamics of the whole ecosystem, such that their exclusion from a community can create significant changes in species density and composition \parencite{Paine1969}. Furthermore, the impact of keystone species is disproportionately large relative to their abundance \parencite{Power1996}. The keystone species concept is  relevant to ecosystem management and conservation in helping identify species of particular importance for the safeguarding of a whole system \parencite{Soule2005a}. Though determining which species truly serve keystone roles can be a lengthy process, we can identify potential candidates by comparing a species impact on the population growth of other species to it's own abundance \parencite{Libralato2006}. Figure \ref{fig:species} B. highlights three native species in green which may be potential keystone species due to having strongly competitive or facilitative effects on the rest of the community overall, despite rather low abundances: \textit{Trachymene ornata} (TROR), \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). 
 
 
     \subsubsection*{Though exotic species are typically thought to compete with natives, there are also reports of facilitative exotics. Is this the case in our system?}
-    Exotic species may have a wide range of effects on native species, both competitive and facilitative. % Add some references here 
-    By defining per-capita interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to natives. Figure \ref{fig:species} C. plots the sum of a species competitive effects on neighbours against the sum of it's facilitative effects on neighbours. Exotic species are identified in red. \textit{Hypochaeris glabra} (HYPO) and \textit{Arctotheca calendula} (ARCA) both have a lower-than-median facilitative effect on neighbours but a higher-than-median competitive effect, these two species fit the narrative of potentially harmful exotic species which compete with natives. \textit{Pentameris aroides} (PEAI) on the other hand has a slightly lower-than-median competitive effect and higher-than-median facilitative effect: it competes more weakly and facilitates more strongly than the median species in the system. In this instance, \textit{P. aroides} is an exotic species which nevertheless facilitates some native species.
+    Exotic species may have a wide range of effects on native species, both competitive and facilitative \parencite{Corbin2004, Rodriguez2006, Xiao2012, Godoy2014}. By defining per-capita interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to natives. Figure \ref{fig:species} C. plots the sum of a species competitive effects on neighbours against the sum of it's facilitative effects on neighbours. Exotic species are identified in red. \textit{Hypochaeris glabra} (HYPO) and \textit{Arctotheca calendula} (ARCA) both have a lower-than-median facilitative effect on neighbours but a higher-than-median competitive effect, these two species overall have a competitive effect on the native-dominated community. \textit{Pentameris aroides} (PEAI) on the other hand has a slightly lower-than-median competitive effect and higher-than-median facilitative effect: it competes more weakly and facilitates more strongly than the median species in the system. In this instance, \textit{P. aroides} is an exotic species which nevertheless facilitates some native species.
 
 
 
