restructuring discussion and rewrote first two apragraphs

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -106,9 +106,6 @@
     % \paragraph{}
     % Measuring non-trophic relationships in plant communities is difficult, in part because they cannot be directly observed as in food webs or other interaction networks, and must instead be inferred by other means. Arguably the most common approach to empirically quantifying interactions between a focal species and others involves measuring the effects of neighbours on a proxy for lifetime reproductive success (e.g. fecundity, growth rate) \parencite{Connell1961, Grace1990}. This can be done for example by growing focal species with neighbours of different identities and at varying densities, in the field or laboratory. The resulting phenomenological interaction strengths are not dependant on any specific mechanism and can be directly linked to changes in species abundances through the use of population dynamic models, for example with the Beverton-Holt model \parencite{Beverton1957, Levine2009}). This approach has been widely applied and has greatly improved our understanding of competition and its effects on biodiversity \parencite{Tilman1982, Chesson2000b, Levine2008, Adler2010, Mayfield2010a, Kraft2015} but remains limited to investigating interactions between few species, rather than a diverse community. The reason is two-fold: applying this method to a large number of species requires both large amounts of data and replication, as well as complex models which can be difficult to implement and run the danger of over-parameterisation. 
 
-    % \paragraph{} 
-    % A common alternative which is less demanding, and scalable to high-diversity systems is the use of association, or co-occurrence networks. Plant 'interactions' are inferred by measuring positive and negative spatial associations between species (e.g. \cite{Saiz2011}), resulting in networks which capture a variety of factors including biotic interactions \parencite{Losapio2019}. This approach requires data which is much more easily obtainable and can naturally handle a large number of species. A wide range of packages are available in R to deduce association networks, alongside further tools and methods to better infer plant interactions from spatial distribution patterns \parencite{Keil2019}, for example by including environmental covariates. Spatial association networks however, have been found to remain poor predictors of species interactions and rarely match empirical estimates \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
-
 
 \section{Results}
 
@@ -191,7 +188,7 @@
 
 
     \subsubsection*{Which species may be taking on keystone roles in the system?}
-    Keystone species have strong effects on the dynamics of the whole ecosystem, such that their exclusion from a community can create significant changes in species density and composition \parencite{Paine1969}. Furthermore, the impact of keystone species is disproportionately large relative to their abundance \parencite{Power1996}. The keystone species concept is  relevant to ecosystem management and conservation in helping identify species of particular importance for the safeguarding of a whole system \parencite{Soule2005a}. Though determining which species truly serve keystone roles can be a lengthy process, we can identify potential candidates by comparing a species impact on the population growth of other species to it's own abundance \parencite{Libralato2006}. Figure \ref{fig:species} B. highlights three native species in green which may be potential keystone species due to having strongly competitive or facilitative effects on the rest of the community overall, despite rather low abundances: \textit{Trachymene ornata} (TROR), \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). 
+    Keystone species have strong effects on the dynamics of the whole ecosystem, such that their exclusion from a community can create significant changes in species density and composition \parencite{Paine1969}. Furthermore, the impact of keystone species is disproportionately large relative to their abundance \parencite{Power1996, Piraino2002, Libralato2006}. The keystone species concept is  relevant to ecosystem management and conservation in helping identify species of particular importance for the safeguarding of a whole system \parencite{Soule2005a}. Though determining which species truly serve keystone roles can be a lengthy process, we can identify potential candidates by comparing a species impact on the population growth of other species to it's own abundance \parencite{Libralato2006}. Figure \ref{fig:species} B. highlights three native species in green which may be potential keystone species due to having strongly competitive or facilitative effects on the rest of the community overall, despite rather low abundances: \textit{Trachymene ornata} (TROR), \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). 
 
 
     \subsubsection*{Though exotic species are typically thought to compete with natives, there are also reports of facilitative exotics. Is this the case in our system?}
@@ -246,22 +243,37 @@
 
 
     \paragraph{} 
-    The framework presented here allows the estimation of diverse interaction matrices from horizontal community data. Given individual observations of performance and the identity of the local neighbourhood, our model uses Bayesian regression to quantify the competitive or facilitative effects of one element on another and vice versa. Several aspects of our model and its implementation allow for the capture of complex features of interacting assemblages compared to co-occurrence networks. Like co-occurrence networks, our framework is flexible to the inclusion of many nodes. Unlike co-occurrence networks however, interactions in our model are estimated from node effects on each other's performance.  
-
-
-    \paragraph{}
-    Here, we illustrate the unique useful features of this framework in an ecological context. In our case study, we described how plant species are linked through plant-plant interactions. We then showed how this type of network can be used to understand the role of different species in the community, for example the effect of exotics on natives. Effectively, species interaction networks have a wide range of applications, such as evaluating ecosystem response to human-altered landscapes, guiding future management decisions \parencite{Ross2011} or exploring how communities may respond to global warming \parencite{Gorman2019}. Moreover, couching species-rich interaction matrices into models of population dynamics allow us to compare how community dynamics may affect and respond to the presence of a specific species. This can direct ecosystem management efforts such as prioritising certain species to conserve, or in the case of invasives, which species to eradicate. The examples we describe in our case study are not exhaustive, but serve to illustrate how interaction matrices can help us understand what roles specific species play within a community. 
+    Our novel framework quantifies the effects of interacting elements on each other's performance, allowing the estimation of diverse, horizontal interaction matrices. The resulting matrices are non-symmetrical and can contain both positive and negative interactions, as well as the effect of one element on itself. This framework is flexible to multiple metrics of performance, element identity (groups) and diversity, and provides a way to estimate un-observed interactions from those which are observed. Moreover, these matrices can be transformed into interaction networks through the use of further models describing the system's dynamics. These features make it particularly useful in an ecological context, as illustrated in our case study on a diverse wildflower community, as well as flexible to data from the wide range of complex systems which are dominated by horizontal interactions.
 
     \paragraph{}
-    Certain species play important roles in the community which can be deduced from their position in the interaction network \parencite{Cirtwill2018a}. Identifying keystone, foundation and other important types of species roles is helpful for understanding biological diversity, ecosystem integrity and functioning, especially in response to disturbances and other stresses \parencite{Nyakatya2008, Orwin2016, Losapio2017, Narwani2019}.    Keystone species for example are both crucial to maintaining the organisation and diversity of their community, and have exceptionally strong effects on other species \parencite{Mills1993}, often leading to secondary extinctions when they are removed from a network. Their influence on the abundance of other species and wider community dynamics is disproportionately high compared to their biomass \parencite{Power1996, Piraino2002, Libralato2006}, which allows easy identification of potential keystone species from our network results (Fig. \ref{fig:species}.B) though further tests are recommended for validation. As another example, foundation species also control local biodiversity but are widely connected, locally abundant and hold a unique position in regards to their effects on community dynamics \parencite{Ellison2005, Baiser2013, Ellison2019}. Though it can take many years of careful study to identify foundation species from abundant species which are not as crucial to community structure, our framework can help distinguish species which are abundant and interact weakly with neighbours from common species which have strong competitive and facilitative effects on the community. 
-    %     % [The two species were \textit{Gilberta tenuifolia} and \textit{Haloragis odontocarpa} in case that's interesting.]
+    Here, we illustrate the unique useful features of this framework in an ecological context. In our case study, we show how wildflower species are linked through the resulting plant-plant interaction network. In turn, this network can help us identify what roles specific species play within a community, and explore how the mechanisms maintaining diversity and stability operate in these systems. By estimating the effects of species on each other's performance, and subsequently their population growth and patterns of abundance, this method stands in contrast to association networks. These are a common alternative to estimating interaction networks in high-diversity systems which capture spatial associations between species (e.g. \cite{Saiz2011}) and thus require easier-to-obtain data. Association networks also benefit from easy implementation with a wide range of packages in R (e.g. \cite{Griffith2016}) though the resulting networks are typically symmetrical and cannot capture a species' effect on itself. Moreover, association networks remain poor predictors of species interactions and rarely match empirical estimates \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
 
-    \paragraph{} % Keep as is
-    Network approaches can also be used to evaluate how specific species are integrated within the community. Our case study for example illustrates how different exotic species can have widely varying competitive and facilitative effects on neighbours (Fig. \ref{fig:species}). Though many invasive species compete with natives \parencite{Naeem2000, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017}. Alternatively, threatened species could also benefit from this type of analysis. Recent work suggests rare species are the prime emitters and beneficiaries of facilitative interactions, forming mutualistic refuges from competitive dominants \parencite{Calatayud2019, Hines2020}. Identifying neighbouring species which facilitate and increase the local abundance of rarer, endangered target species is one of many strategies which could help guide conservation management.
+    \paragraph{}
+    The information provided by an interaction network can be put to use in a wide variety of applications, from conservation efforts aimed at regulating species abundances, to answering questions about how the system regulates itself and maintains diversity. 
+
+
+ Effectively, species interaction networks have a wide range of applications, such as evaluating ecosystem response to human-altered landscapes, guiding future management decisions \parencite{Ross2011} or exploring how communities may respond to global warming \parencite{Gorman2019}. Moreover, couching species-rich interaction matrices into models of population dynamics allow us to compare how community dynamics may affect and respond to the presence of a specific species. 
+
+
+
+ This can direct ecosystem management efforts such as prioritising certain species to conserve, or in the case of invasives, which species to eradicate. The examples we describe in our case study are not exhaustive, but serve to illustrate how interaction matrices can help us understand what roles specific species play within a community. 
+
+    \paragraph{}
+    Certain species play important roles in the community which can be deduced from their position in the interaction network \parencite{Cirtwill2018a}. Identifying keystone, foundation and other important types of species roles is helpful for understanding biological diversity, ecosystem integrity and functioning, especially in response to disturbances and other stresses \parencite{Nyakatya2008, Orwin2016, Losapio2017, Narwani2019}.    
+
+ Our case study for example illustrates how different exotic species can have widely varying competitive and facilitative effects on neighbours (Fig. \ref{fig:species}). Though many invasive species compete with natives \parencite{Naeem2000, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017}. Alternatively, threatened species could also benefit from this type of analysis. 
+
+
 
 
     \paragraph{}
     Quantifying the matrix of per-capita interaction strengths between species in horizontal communities can also allow us to explore how the mechanisms maintaining diversity and stability operate in these systems and across a broad number of species. Self-regulation, for example, is an extremely important driver of community stability \parencite{Barabas2017} and arises from how individuals of the same species interact with one another. Whereas same-species effects cannot be estimated by association networks, our framework quantifies intraspecific interactions and allows us to measure the strength and prevalence of competitive and facilitative density-dependence. Measures of intra and interspecific interactions can also allow us to estimate niche overlap between species (for an example, see \cite{Chu2015a}): weak interactions between species suggests they are not sharing or competing for many resources, and occupy different niche spaces in the community. Strong competitive self-regulation, and weak interactions between two species, are two of many mechanisms leading to stability and diversity in plant communities.
+
+    Recent work suggests rare species are the prime emitters and beneficiaries of facilitative interactions, forming mutualistic refuges from competitive dominants \parencite{Calatayud2019, Hines2020}. Identifying neighbouring species which facilitate and increase the local abundance of rarer, endangered target species is...
+
+    . %As another example, foundation species also control local biodiversity but are widely connected, locally abundant and hold a unique position in regards to their effects on community dynamics \parencite{Ellison2005, Baiser2013, Ellison2019}. Though it can take many years of careful study to identify foundation species from abundant species which are not as crucial to community structure, our framework can help distinguish species which are abundant and interact weakly with neighbours from common species which have strong competitive and facilitative effects on the community. 
+    %     % [The two species were \textit{Gilberta tenuifolia} and \textit{Haloragis odontocarpa} in case that's interesting.]
+
 
     %         \paragraph{} % MOVED FROM RESULTS
     % In addition to explicitely allowing for many species interactions, including both competitive (Figure \ref{fig:netwks}.A) and facilitative (Figure \ref{fig:netwks}.B) interactions is another feature which distinguishes our framework from traditional approaches to plant community ecology. Plant population dynamic models typically force interactions to be competitive, despite rising evidence that facilitation is common and an important driver of plant community dynamics \parencite{Brooker2008a}.
